test/conformance/chainsaw/generating-policies/data/sync/sync-update-trigger-in-place/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sync-update-trigger-in-place
  annotations:
    quota: "10"
