test/conformance/chainsaw/generating-policies/data/sync/sync-update-trigger-in-place/downstream-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: sync-update-trigger-in-place
  namespace: sync-update-trigger-in-place
data:
  QUOTA: "10"
